8028280: ParkEvent leak when running modified runThese which only loads classes

Use spin lock to manage ParkEvent and PlatformEvent free lists.

Reviewed-by: dholmes, fparain